# projeto-ml-pizzas

./: README.md  app.py  pyproject.toml  testes.ipynb
